EXTRA_DIST = \
	amdgpu_drm.h \
	armada_drm.h \
	drm_fourcc.h \
	drm.h \
	drm_mode.h \
	drm_sarea.h \
	etnaviv_drm.h \
	exynos_drm.h \
	i810_drm.h \
	i915_drm.h \
	Makefile.am \
	mga_drm.h \
	msm_drm.h \
	nouveau_drm.h \
	omap_drm.h \
	qxl_drm.h \
	r128_drm.h \
	radeon_drm.h \
	savage_drm.h \
	sis_drm.h \
	sync_file.h \
	tegra_drm.h \
	vc4_drm.h \
	vgem_drm.h \
	via_drm.h \
	virtgpu_drm.h \
	vmwgfx_drm.h \
	$(NULL)
